# kernel

./: .dockerignore  BLOG.md  Cargo.toml  Cargo.toml.save  Dockerfile  NEEDED.md  README.md  TESTING.md  THANKYOU.md  TODO  VERSIONHISTORY.md  bootstrap.sh  layout  runos  rust-toolchain.toml  text  triplet  x86_64-libertyos.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  successful-build.md
.github/workflows/: rust.yml
boot/: Cargo.toml
boot/src/: main.rs
disk/: boot.sh
doc/: Contributors  LAYOUT.md  THANKYOU.md  upcoming_features
ideas/: README.md  better-error-messages.md  build-system.md  consolidate-errors.md  consolidate-macros.md  new-std.md
reformat/: main
rewrite/: main.rs
src/: allocator.rs  ata.rs  broken.rs  byteparse.rs  bytesize.rs  clock.rs  cmos.rs  ctypes.rs  font.rs  gdt.rs  init.rs  interrupts.rs  intr.rs  issue  kbd.rs  lib.rs  macros.rs  main.rs  mem.rs  noblkio.rs  pic.rs  rand.rs  rgx.rs  ser.rs  time.rs  vgabuff.rs  vgabuffer.rs  vol.rs
src/allocator/: bump.rs  fixedsize.rs  lnls.rs  mod.rs
src/arch/: mod.rs
src/arch/riscv/: mod.rs
src/arch/riscv/rt/: mod.rs
src/arch/x64/: mod.rs
src/arch/x64/instructions/: mod.rs
src/arch/x64/reg/: mod.rs  rflags.rs
src/arch/x64/structures/: mod.rs  port.rs
src/data/: mod.rs
src/data/json/: mod.rs  parse.rs  traits.rs
src/data/json/parser/: implementation.rs  mod.rs  traits.rs
src/data/parse/: json.rs  mod.rs  utf8.rs
src/data/ucs2/: mod.rs
src/data/utf8/: mod.rs  types.rs
src/dev/: mod.rs  mouse.rs
src/dev/drivers/: mm_uart.rs  mod.rs  pic8259.rs
src/dev/kbd/: mod.rs
src/fs/: ata.rs  blk.rs  blkdev.rs  bmapblk.rs  dev.rs  directory.rs  directory_entry.rs  directory_read.rs  file.rs  mod.rs  sblk.rs
src/graphics/: mod.rs
src/graphics/vga/: backupmod  mod.rs  pal.rs  std_color.rs
src/io/: mod.rs  stderr.rs  stdin.rs  stdout.rs
src/libcore/: mod.rs
src/libcore/allocator/: bump.rs  fixedsize.rs  lnls.rs  mod.rs
src/libcore/arch/x64/: address.rs
src/libcore/data/: mod.rs
src/libcore/dev/: mod.rs
src/libcore/dev/drivers/: mod.rs  pic8259.rs  uart.rs
src/libcore/dev/kbd/: mod.rs
src/libcore/fs/: ata.rs  blk.rs  blkdev.rs  bmapblk.rs  dev.rs  directory.rs  directory_entry.rs  directory_read.rs  file.rs  mod.rs  sblk.rs
src/libcore/graphics/: mod.rs
src/libcore/graphics/framebuff/: mod.rs
src/libcore/graphics/vga/: mod.rs  std_color.rs
src/libcore/io/: mod.rs  stderr.rs  stdin.rs  stdout.rs
src/libcore/math/float/: absval.rs  arcsine.rs  ceiling.rs  cosine.rs  cpsign.rs  floor.rs  hypotenuse.rs  icos.rs  invert.rs  invsr.rs  itan.rs  log.rs  logb10.rs  logb2.rs  mod.rs  nlog.rs  round.rs  sine.rs  sr.rs  tangent.rs
src/libcore/math/measurement/: mod.rs
src/libcore/sys/: console.rs  cpu.rs  idt.rs  mod.rs  pci.rs  proc.rs  prompt.rs  rand.rs  rsdp.rs
src/libcore/sys/boot/: efi.rs  efi.rs.save  mod.rs
src/libcore/sys/sc/: mod.rs  svc.rs
src/libcore/task/: mod.rs  prompt.rs
src/libcore/user/: mod.rs  shell.rs  ut.rs
src/libraries/boot/: Cargo.toml
src/libraries/boot/src/: bootinfo.rs
src/libraries/graphics/: mod.rs
src/libraries/io/: err.rs
src/libraries/ps2mouse/: Cargo.toml
src/libraries/runtime/: log.rs
src/libraries/sovereign/: Cargo.toml
src/libraries/utilities/: bytesize.rs
src/math/: mod.rs
src/math/float/: absval.rs  arcsine.rs  ceiling.rs  cosine.rs  cpsign.rs  fl.rs  floor.rs  hypotenuse.rs  icos.rs  inv_cos.rs  inv_sqrt.rs  inv_tan.rs  invert.rs  itan.rs  ln.rs  log.rs  log_10.rs  log_2.rs  logb10.rs  logb2.rs  mod.rs  nlog.rs  round.rs  sine.rs  sqrt.rs  sr.rs  tangent.rs
src/math/int/: sr.rs
src/math/measurement/: mod.rs
src/math/measurements/: mod.rs
src/math/units/: bparse.rs  bsize.rs  mod.rs
src/sys/: acpi.rs  console.rs  gdt.rs  idt.rs  log.rs  mod.rs  pci.rs  proc.rs  prompt.rs  rand.rs
src/sys/boot/: memmap.rs
src/sys/sc/: mod.rs  svc.rs
src/sys/task/: exec.rs  kbd.rs  mod.rs
src/syscall/: err.rs  mod.rs
src/task/: mod.rs  simpexec.rs
src/user/: date.rs  shell.rs  ut.rs
tests/: basicboot.rs  heapalloc.rs  shouldpanic.rs  stackoverflow.rs
tests/boilerplate/: INFO.md
tests/broken/: test_sqrt.rs
(+31 files in other folders)
