[package]
authors = ["Daniel P. Teberian"]
categories = ["embedded", "no-std"]
description = "The kernel for LibertyOS."
edition = "2018"
license = "Apache-2.0"
keywords = ["no-std", "liberty", "libertyos", "os", "kernel"]
name = "libertyos_kernel"
readme = "README.md"
repository = "https://github.com/LibertyOS-Development/kernel"
version = "0.11.1"

[dependencies]
bitflags = "1.3.2"
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
embedded-graphics = "0.7.1"
linked_list_allocator = "0.9.0"
log = "0.4.14"
volatile = "0.2.6"
pc-keyboard = "0.5.0"
pic8259 = "0.10.1"
x86_64 = "0.14.2"
spin = "0.5.2"
#time = { version = "0.3.4", default-features = false }
tinybmp = "0.3.1"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
		"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
		"-display", "none"
	    ]
test-success-exit-code = 33
test-timeout = 300


[[test]]
name = "shouldpanic"
harness = false

[[test]]
name = "stackoverflow"
harness = false
