[package]
authors = ["Daniel P. Teberian"]
categories = ["embedded", "no-std"]
description = "The kernel for LibertyOS."
edition = "2018"
license = "Apache-2.0"
keywords = ["no-std", "liberty", "libertyos", "os", "kernel"]
name = "libertyos_kernel"
readme = "README.md"
repository = "https://github.com/LibertyOS-Development/kernel"
version = "0.15.7"

[dependencies]
acpi = "4.1.0"
aml = "0.16.0"
arrayvec = { version = "0.7.2", default-features = false }
bit_field = "0.10.1"
bitflags = "1.3.2"
bootloader = { version = "0.9.9", features = ["map_physical_memory"]}
conquer-once = { version = "0.2.0", default-features = false }
embedded-graphics = "0.7.1"
fat32 = "0.2.0"
libm = "0.2"
linked_list_allocator = "0.9.0"
log = "0.4.14"
memoffset = "0.6.4"
num-traits = { version = "0.2.14", default-features = false }
object = { version = "0.27.1", default-features = false, features = ["read"] }
pc-keyboard = "0.5.0"
x86_64 = "0.14.7"
rand = { version = "0.8.4", default-features = false }
rand_core = { version = "0.6.3", default-features = false }
raw-cpuid = "10.2.0"
serde = { version = "1.0.133", default-features = false }
spin = "0.5.2"
tinybmp = "0.3.1"
uart_16550 = "0.2.0"
volatile = "0.2.6"
vga = "0.2.7"
vte = "0.10.1"
#x86 = "0.44.0"

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
		"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
		"-display", "none"
	    ]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "shouldpanic"
harness = false

[[test]]
name = "stackoverflow"
harness = false
